# type_name

./: CMakeLists.txt  README.md
cmake/: TypeNameConfig.cmake.in
include/type_name/: type_name.clang.5.hpp  type_name.clang.hpp  type_name.gcc.7.3.hpp  type_name.gcc.7_3.hpp  type_name.gcc.8.1.hpp  type_name.gcc.8_1.hpp  type_name.gcc.hpp  type_name.hpp  type_name.msvc.19.21.hpp  type_name.msvc.hpp
